--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>ist only a test all must be ok</h1>
+	<h1>It is only a test. All must be ok! </h1>
 </body>
 </html>
